# talk-to-vibe-multi-platform

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_ttv.sh  setup.sh  setup_macos.sh
packaging/macos/: talktovibe_app.spec
talk_to_vibe/: __main__.py  app.py  cli.py  errors.py  menubar.py  tray.py
talk_to_vibe/audio/: __init__.py  recorder.py  wav.py
talk_to_vibe/config/: __init__.py  constants.py  loader.py  models.py  wizard.py
talk_to_vibe/providers/: __init__.py  base.py  factory.py  groq_whisper.py  local_whisper.py  mlx_whisper.py  openai_compatible.py  openai_whisper.py  openrouter_multimodal.py
talk_to_vibe/providers/prompts/: __init__.py  transcription.md
tests/: test_app.py  test_audio_recorder.py  test_audio_wav.py  test_cli.py  test_config_loader.py  test_errors.py  test_local_whisper_provider.py  test_macos_scripts.py  test_menubar.py  test_mlx_whisper_provider.py  test_openai_compatible.py  test_openrouter_multimodal.py  test_platform_linux.py  test_platform_macos.py  test_prompts.py  test_provider_factory.py  test_tray.py
