[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "talk-to-vibe"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "httpx>=0.24.0",
]

[project.scripts]
talktovibe = "talk_to_vibe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["talk_to_vibe*"]
